--- a/TSTSEF/Views/Relatives/Index.cshtml
+++ b/TSTSEF/Views/Relatives/Index.cshtml
@@ -11,7 +11,7 @@
     <div class="alert alert-warning" role="alert">
         @TSTSEF.Views.Relatives.Resources.Warning1
     </div>
-}
+}hey
 
 <p>
     @Html.ActionLink("Create New", "Create")
